# led

./: .gitignore  .sops.yaml  Cargo.toml  SETUP.md  justfile  secrets.env.example  secrets.sops.env  secrets.sops.json
.github/workflows/: version-check.yml
crates/display-core/: Cargo.toml
crates/display-core/src/: lib.rs
crates/display-core/src/frames/: boot.rs  clock.rs  gif.rs  image.rs  life.rs  mod.rs  setup.rs  shapes.rs  test.rs  text.rs
crates/display-core/tests/: scenes.rs
crates/driver/: Cargo.toml  build.rs
crates/driver/src/: config.rs  display.rs  lib.rs  main.rs  realtime.rs  sched.rs  sink.rs  state.rs  telemetry.rs
crates/wifi-setup/: Cargo.toml
crates/wifi-setup/src/: main.rs
dash/: .eslintrc.json  env.d.ts  eslint.config.mjs  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
dash/src/: globals.css
dash/src/app/: actions.ts  box.tsx  context.ts  controls.tsx  entries.tsx  error.tsx  layout.tsx  page.tsx  status.tsx
dash/src/app/components/: BrightnessControl.tsx  Button.tsx  ColorPicker.tsx  Composer.tsx  ComposerShell.tsx  EffectsPanel.tsx  EntriesList.tsx  Fader.tsx  HexColorInput.tsx  InstrumentHeader.tsx  LiveDot.tsx  MatrixPreview.tsx  PanelSwitcher.tsx  SegmentedToggle.tsx  SolidColorPicker.tsx  StatusBar.tsx  colors.tsx  controls.tsx  effects.tsx  entries.tsx  message.tsx  panels.tsx  status.tsx  text.tsx
dash/src/app/devtools/shapes/: page.tsx
dash/src/app/frames/: clock.tsx  image.tsx  index.ts  life.tsx  types.ts
dash/src/app/mcp/: route.ts
dash/src/app/modes/: ModeSwitcher.tsx  life.tsx  types.ts
dash/src/app/scenes/: ModeSwitcher.tsx  clock.tsx  gif.tsx  image.tsx  index.ts  life.tsx  paint.tsx  shapes.tsx  test.tsx  types.ts
dash/src/components/: CHANGELOG.md  alert.tsx  avatar.tsx  badge.tsx  button.tsx  checkbox.tsx  description-list.tsx  dialog.tsx  dropdown.tsx  fieldset.tsx  heading.tsx  input.tsx  link.tsx  listbox.tsx  navbar.tsx  pagination.tsx  radio.tsx  select.tsx  sidebar-layout.tsx  sidebar.tsx  stacked-layout.tsx  switch.tsx  table.tsx  text.tsx  textarea.tsx
dash/src/types/: supabase.d.ts
dash/src/utils/: actions.ts  color.ts  fetcher.ts  offline.ts  useComposerConfig.ts  useDebouncedSetMode.ts  useNow.ts  useSyncedFromProp.ts
dash/wasm-sim/: Cargo.toml
dash/wasm-sim/pkg/: package.json  wasm_sim.d.ts  wasm_sim.js  wasm_sim_bg.js  wasm_sim_bg.wasm  wasm_sim_bg.wasm.d.ts
dash/wasm-sim/src/: lib.rs
deploy/: bootstrap.sh  deploy.sh  led-driver.service  service.sh
display-core/src/: clock.rs  image.rs  lib.rs
display-core/src/frames/: boot.rs  clock.rs  gif.rs  image.rs  life.rs  mod.rs  setup.rs  shapes.rs  test.rs  text.rs
display-core/tests/: scenes.rs
driver/: Cargo.toml  build.rs
driver-common/: Cargo.toml
driver-common/src/: config.rs  lib.rs  root.rs
driver/src/: config.rs  display.rs  lib.rs  main.rs  realtime.rs  routes.rs  state.rs  telemetry.rs
driverup/: Cargo.toml
driverup/src/: main.rs
scripts/: dev.sh  flash-sd.sh  init.sh  install-tailscale-chroot.sh  lib.sh  nspawn.sh
secrets/: admin.sops.json  fleet.sops.json
service/: alsa-blacklist.conf  captive-dnsmasq.conf  config.toml.tmpl  disable-ipv6.conf  firstrun.sh  install-tailscale-chroot.sh  journald-persistent.conf  led-driver.service  led-tailscale-init  led-tailscale-init.service  led-wifi-setup.service
supabase/migrations/: 20260427000001_initial.sql  20260427000002_panel_notify.sql  20260427000003_panel_driver_version.sql  20260427000004_panel_mode.sql  20260428000001_panel_last_seen.sql  20260428000002_fix_panel_notify_triggers.sql  20260428000003_drop_panel_notify.sql  20260429000001_panel_is_off.sql  20260525000001_panel_brightness.sql
terraform/: .terraform.lock.hcl  main.tf  outputs.tf  supabase.tf  terraform.tfstate  variables.tf  vercel.tf
wifi-setup/src/: main.rs
