[workspace]
resolver = "2"
members = ["crates/display-core", "crates/driver", "crates/wifi-setup"]
# wasm-sim has its own [profile.release] (opt-level = "z", lto, single
# codegen unit — wasm-pack defaults) that would conflict with the
# workspace's release profile, so keep it out and build it via
# wasm-pack. It also lives under `dash/` (rather than `crates/`)
# because Turbopack's `file:` resolver doesn't follow cross-directory
# symlinks — keeping it co-located with the dash means bun can
# hard-link the package straight into node_modules without breaking
# `next dev`.
exclude = ["dash/wasm-sim"]
