[workspace]
resolver = "2"
members = ["crates/display-core", "crates/driver", "crates/wifi-setup"]

# Lockstep version across every workspace crate (and, by manual mirror,
# wasm-sim + dash — both are excluded from the workspace for unrelated
# reasons but bumped to match by the version-check workflow).
# Single source of truth; bump here, every crate's `version.workspace
# = true` picks it up. Internal-fleet system; we ship as a unit, so
# per-crate semver doesn't carry information for us.
[workspace.package]
version = "1.1.2"
# wasm-sim has its own [profile.release] (opt-level = "z", lto, single
# codegen unit — wasm-pack defaults) that would conflict with the
# workspace's release profile, so keep it out and build it via
# wasm-pack. It also lives under `dash/` (rather than `crates/`)
# because Turbopack's `file:` resolver doesn't follow cross-directory
# symlinks — keeping it co-located with the dash means bun can
# hard-link the package straight into node_modules without breaking
# `next dev`.
exclude = ["dash/wasm-sim"]

# Shared dep versions — bumped here flow through every workspace
# member that opts in via `<dep>.workspace = true`.
[workspace.dependencies]
embedded-graphics = "0.8.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio = { version = "1.39", features = ["full"] }
