[package]
name = "led-driver"
version = "0.3.0"
edition = "2021"

[dependencies]
display-core = { path = "../display-core" }
anyhow = "1.0.86"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
fastrand = "2"
clap = { version = "4.5.16", features = ["derive"] }
embedded-graphics = "0.8.1"
hostname = "0.4"
human-panic = "2.0"
opentelemetry = { version = "0.30", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.30"
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "http-proto",
    "reqwest-blocking-client",
    "reqwest-rustls",
    "metrics",
    "logs",
] }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.30", features = [
    "rt-tokio",
    "metrics",
    "logs",
] }
parking_lot = "0.12.3"
postgrest = "1.6.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
    "blocking",
] }
futures-channel = "0.3"
futures-util = "0.3"
tokio-postgres = "0.7"
tokio-postgres-rustls = "0.13"
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"
rpi-led-panel = "0.5.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
thiserror = "1.0.63"
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-appender = "0.2.3"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
