[package]
name = "led-driverup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
aws-config = "1.5.5"
aws-sdk-s3 = "1.43.0"
clap = { version = "4.5.15", features = ["derive"] }
env_logger = "0.11.5"
human-panic = "2.0.1"
led-driver-common = { path = "../driver-common" }
log = "0.4.22"
reqwest = { version = "0.12.5", default-features = false, features = [
    "json",
    "rustls-tls",
] }
serde = { version = "1.0.208", features = ["derive"] }
tokio = { version = "1.39.2", features = ["full"] }
toml = "0.8.19"
