[package]
name = "display-core"
version = "1.1.0"
edition = "2021"

[dependencies]
embedded-graphics.workspace = true
# `rc` (on top of the workspace's `derive`) enables (de)serialization
# of Arc-wrapped Mode payloads, the trick that lets the driver's
# cache hand out cheap Arc clones instead of 720KB Vec memcpys.
serde = { workspace = true, features = ["rc"] }
