[package]
name = "led-driver"
version = "1.0.0"
edition = "2021"

[features]
# `rpi` pulls in the Pi-only RGB matrix bindings. Default-on so prod
# crosses build the same way they always did. Disable for native dev
# (`cargo run --no-default-features` / `just dev`) — the binary then
# only knows about the terminal sink.
default = ["rpi"]
rpi = ["dep:rpi-led-panel"]

[dependencies]
display-core = { path = "../display-core" }
anyhow.workspace = true
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
chrono-tz = { version = "0.10", default-features = false }
fastrand = "2"
clap = { version = "4.5.16", features = ["derive"] }
embedded-graphics.workspace = true
hostname = "0.4"
human-panic = "2.0"
libc = "0.2"
opentelemetry = { version = "0.30", features = ["metrics", "logs"] }
opentelemetry-appender-tracing = "0.30"
opentelemetry-otlp = { version = "0.30", default-features = false, features = [
    "http-proto",
    "reqwest-blocking-client",
    "reqwest-rustls",
    "metrics",
    "logs",
] }
opentelemetry-semantic-conventions = { version = "0.30", features = [
    "semconv_experimental",
] }
opentelemetry_sdk = { version = "0.30", features = [
    "rt-tokio",
    "metrics",
    "logs",
] }
parking_lot = "0.12.3"
postgrest = "1.6.0"
reqwest = { version = "0.12.5", default-features = false, features = [
    "rustls-tls",
    "blocking",
] }
futures-util = "0.3"
tokio-tungstenite = { version = "0.24", default-features = false, features = [
    "rustls-tls-webpki-roots",
    "connect",
] }
rpi-led-panel = { version = "0.5.1", optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror = "1.0.63"
tokio.workspace = true
toml = "0.8.19"
tracing.workspace = true
tracing-appender = "0.2.3"
tracing-subscriber.workspace = true
