[package]
name = "led-wifi-setup"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
axum = { version = "0.7", default-features = false, features = ["http1", "tokio", "form", "tower-log"] }
clap = { version = "4.5", features = ["derive", "env"] }
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
