[package]
name = "wasm-sim"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
display-core = { path = "../../display-core" }
embedded-graphics = "0.8.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
serde-wasm-bindgen = "0.6.5"
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
