[package]
name = "wasm-sim"
version = "1.1.1"
edition = "2021"

# Standalone workspace. wasm-sim is `exclude`d from the parent
# workspace at /Cargo.toml because of the conflicting release
# profile, but with a `[workspace.package]` set up there cargo
# otherwise tries to inherit. Empty table here = "I'm my own
# single-package workspace, don't look upward."
[workspace]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
display-core = { path = "../../crates/display-core" }
embedded-graphics = "0.8.1"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.125"
wasm-bindgen = "0.2.95"
console_error_panic_hook = { version = "0.1.7", optional = true }

[features]
default = ["console_error_panic_hook"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
